Adiciona arquivos e estudo sobre inline e block

--- a/fundamentos/bloco-3/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -9,6 +9,7 @@
   .width-and-height {
     height: 50px;
     width: 50px;
+    border: none;
   }
   
   /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
