--- a/fundamentos/bloco-3/dia-3-html-css-seletores-e-posicionamento/style3-2.css
+++ b/fundamentos/bloco-3/dia-3-html-css-seletores-e-posicionamento/style3-2.css
@@ -18,7 +18,7 @@ div:nth-of-type(4) {
 div:nth-of-type(5) {
     background-color: pink;
 }
-div:nth-of-type(2n-1) h3{
+div:nth-child(odd) h3{
     font-style: italic;
 }
 div:nth-of-type(2) h3{
